--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@mdi/font": "^6.3.95",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "history": "5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.0-beta.7",
     "react-scripts": "4.0.3",
     "use-deep-compare-effect": "^1.8.0",
     "web-vitals": "^1.0.1"
